2004-10-13  Al Riddoch  <alriddoch@zepler.org>

	* Release 0.5.91.

2004-10-12  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Message/Element.h: Add operator== for comparing to C
	  strings, to avoid the ambiguity problem.

2004-10-12  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Objects/BaseObject.h: Add pure virtual copy method to
	  BaseObjectData to help solve the problems which occur
	  when modifying objects using smart pointers.

	* Atlas/Objects/gen_cpp.py: Implement the copy() method in all
	  the generated classes.

	* Atlas/Objects/SmartPtr.h: Add a copy() method to the SmartPtr
	  to ensure everything happens in an efficient and type safe way.

	* Atlas/Objects/common.py, Atlas/Objects/GenerateObjectFactory.py:
	  Update the copyright statements in the generated code.

2004-10-11  Ron Steinke <rsteinke@w-link.net>

	* Atlas/Codecs/Bach.cpp, Atlas/Codecs/Bach.h: Fixed a possible
	  blocking read of string escaped characters to check whether
	  data was available between reading the escape and the escaped
	  character.

2004-08-09  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Codecs/Bach.cpp, Atlas/Codecs/Bach.h, Atlas/Codecs/Packed.cpp,
	  Atlas/Codecs/Packed.h, Atlas/Codecs/XML.cpp, Atlas/Codecs/XML.h,
	  Atlas/Net/Stream.cpp, Atlas/Net/Stream.h, Atlas/Objects/BaseObject.h,
	  Atlas/Objects/loadDefaults.cpp, Atlas/Utilities/atlas_convert.cpp,
	  tests/Objects/objects2.cpp: Convert pointer to decode Bridge
	  in codecs and negotiation code to a reference for cleaner looking
	  code.

2004-08-06  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Bridge.h, Atlas/Exception.cpp, Atlas/Exception.h:
	  Move virtual method implementation into the body.

	* Atlas/Task.h: Mark class as obsolete.

	* Atlas/Net/Stream.h: Quick comment about the purpose of these
	  classes.

	* Atlas/Objects/BaseObject.cpp, Atlas/Objects/BaseObject.h:
	  Move virtual functions into the body, and stop trying to
	  inline them.

	* Atlas/Objects/GenerateDispatcher.py: Clean up the generated