@@ -9,9 +9,11 @@ LDADD  = -L$(top_builddir)/Atlas/ -L$(top_builddir)/Atlas/Codecs/ \
 LIBS = -lAtlasObjects-0.6 -lAtlasNet-0.6 -lAtlas-0.6 -lAtlasCodecs-0.6 \
        -lAtlasFilters-0.6 -lAtlasMessage-0.6 -lAtlas-0.6 $(OTHER_LIBS)
 
-check_PROGRAMS = objects1 objects2 encoder1 decoder1 objects_fwd
+check_PROGRAMS = custom_ops objects1 objects2 encoder1 decoder1 objects_fwd
 
 TESTS = $(check_PROGRAMS)
+
+custom_ops_SOURCES = custom_ops.cpp
 
 objects1_SOURCES = objects1.cpp
 
