@@ -1,6 +1,5 @@
 #include <Atlas/Objects/Operation.h>
 #include <Atlas/Objects/Entity.h>
-#include <Atlas/Objects/objectFactory.h>
 #include <Atlas/Objects/loadDefaults.h>
 
 #include <iostream>
